[package]
name = "ACT-IV"
version = "0.1.0"
edition = "2021"
description = "ACT-IV is an open source solution to the file synchronization problem."
readme = "README.org"
license = "Apache-2.0"
license-file = "LICENSE"
repository = "https://gitlab.com/dynami/Active"
homepage = "https://active.dynami.com/"
authors = [
    "EliottoDev",
    "przock"
]

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
serde = { version = "1.0.216", features = ["derive", "std"] }
toml = "0.8.19"

[[bin]]
name = "act"
path = "src/main.rs"
