[package]
name = "ACT-IV"
version = "0.1.0"
edition = "2021"
description = "ACT-IV is an open source solution to the file synchronization problem."
readme = "README.org"
license-file = "LICENSE"
repository = "https://gitlab.com/dynami/Active"
homepage = "https://active.dynami.com/"
authors = [ "EliottoDev", "przock" ]

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
serde = { version = "1.0.216", features = ["derive", "std"] }
chrono = "0.4.39"
git2 = "0.20.0"
tabled = "0.17.0"
toml = "0.8.19"
walkdir = "2.5.0"
tempfile = "3.15.0"
home = "0.5.11"
rusqlite = "0.32.1"

[[bin]]
name = "act"
path = "src/main.rs"
